Head search input textAlign & autoComplete boxShadow fix

--- a/app/globals.css
+++ b/app/globals.css
@@ -36,6 +36,7 @@
 * {
   direction: rtl;
   font-family: FarsiFont,Farsinum ,sans-serif ,Arial, Helvetica !important;
+  box-sizing: border-box;
 }
 
 body {
@@ -74,6 +75,12 @@ body {
 }
 .borderSubSearch{
   border-bottom: 1px solid gray;
+}
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus {
+  -webkit-box-shadow: 0 0 0 1000px white inset !important;
+  box-shadow: 0 0 0 1000px white inset !important;
 }
 
 .bordercorrectaddress{
